# matheusfabiao_portfolio_website

./: .gitignore  LICENSE  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  vite.config.mjs
docs/: index.md
docs/getting_started/: configuration.md  installation.md
docs/stylesheets/: extra.css
env_files/: .env.example
src/core/: settings.py  urls.py
src/portfolio/: admin.py  models.py  views.py
src/portfolio/migrations/: 0001_initial.py
src/portfolio/tests/: conftest.py  test_models.py  test_views.py
src/static/js/: main.js
src/templates/: base.html
src/templates/portfolio/: index.html
