[project]
name = "matheusfabiao-portfolio-website"
version = "0.1.0"
description = "Este projeto é um website que serve como uma vitrine para o meu trabalho, habilidades e experiências. Aqui, você encontrará informações sobre mim, projetos que desenvolvi, tecnologias que domino e formas de entrar em contato."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.1.7",
    "django-vite>=3.1.0",
    "pillow>=11.1.0",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.10.0",
    "ruff>=0.11.2",
    "taskipy>=1.14.1",
]
doc = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.9",
    "mkdocstrings>=0.29.0",
    "mkdocstrings-python>=1.16.8",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['PLC0415', 'PLC2801']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'core.settings'
python_files = ['test*.py', '*_test.py', 'test_*.py']
pythonpath = ['src']
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'

pre_format = 'ruff check --fix'
format = 'ruff format'

makemigrations = 'python src/manage.py makemigrations'

pre_migrate = 'task lint'
migrate = 'task makemigrations && python src/manage.py migrate'

app = 'cd ./src && python .\manage.py startapp'
post_app = 'cd ..'

pre_run = 'task migrate'
run = 'python src/manage.py runserver'

pre_test = 'task lint'
test = 'pytest -s -x --cov=src -vv'
post_test = 'coverage html'

docs = 'mkdocs serve --dev-addr=0.0.0.0:8080'
post_docs = 'cd..'
